# bevy_gltf_transformer

./: Cargo.toml  README.md
src/: data.rs  error.rs  lib.rs  simple.rs  wrap.rs
src/data/: accessible.rs  dense.rs  meta.rs  sparse.rs
src/simple/: gltf.rs
src/util/: mod.rs  norm.rs
src/wrap/: accessor.rs  animation.rs  buffer.rs  camera.rs  light.rs  material.rs  mesh.rs  scene.rs  skins.rs  texture.rs
src/wrap/scene/: traversal.rs
